<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.englishalternative.mystudents.StudentActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout


    android:id="@+id/activity_new_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_spacing_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:textStyle="normal"
            android:textSize="@dimen/small_text_size"
            android:layout_marginStart="@dimen/list_hint_margin"
            android:text="@string/name_student"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/list_main_element_margin"
            android:id="@+id/name_student"
            android:hint="@string/name_student_hint"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_spacing_vertical"
        android:layout_marginTop="@dimen/list_spacing_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:textStyle="normal"
            android:textSize="@dimen/small_text_size"
            android:layout_marginStart="@dimen/list_hint_margin"
            android:text="@string/place_student"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/list_main_element_margin"
            android:id="@+id/place_student"
            android:hint="@string/place_student_hint"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/list_spacing_vertical"
    android:layout_marginTop="@dimen/list_spacing_vertical"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textStyle="normal"
        android:textSize="@dimen/small_text_size"
        android:layout_marginStart="@dimen/list_hint_margin"
        android:layout_marginEnd="@dimen/list_inner_margin"
        android:text="@string/class_student"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/class_student"
        android:hint="@string/class_student_hint"
        android:layout_marginStart="@dimen/list_main_element_margin"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_spacing_vertical"
        android:layout_marginTop="@dimen/list_spacing_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textStyle="normal"
            android:textSize="@dimen/small_text_size"
            android:layout_marginStart="@dimen/list_hint_margin"
            android:layout_marginEnd="@dimen/list_inner_margin"
            android:text="@string/price_lesson"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/price_student"
            android:layout_marginStart="@dimen/list_main_element_margin"
            android:hint="@string/price"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_spacing_vertical"
        android:layout_marginTop="@dimen/list_spacing_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textStyle="normal"
            android:textSize="@dimen/small_text_size"
            android:layout_marginStart="@dimen/list_hint_margin"
            android:layout_marginEnd="@dimen/list_inner_margin"
            android:text="@string/duration"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/duration_student"
            android:layout_marginStart="@dimen/list_main_element_margin"
            android:hint="@string/duration"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_spacing_vertical"
        android:layout_marginTop="@dimen/list_spacing_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:textStyle="normal"
            android:textSize="@dimen/small_text_size"
            android:layout_marginStart="@dimen/list_hint_margin"
            android:text="@string/day_student"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/list_main_element_margin"
            android:id="@+id/date_button"
            android:text="@string/select_day"
            android:textColor="@color/black"
            android:background="@drawable/days_drawable_list"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_spacing_vertical"
        android:layout_marginTop="@dimen/list_spacing_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:textStyle="normal"
            android:textSize="@dimen/small_text_size"
            android:layout_marginStart="@dimen/list_hint_margin"
            android:text="@string/lessons"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/list_main_element_margin"
            android:id="@+id/show_lessons_button"
            android:text="@string/show_lessons"
            android:textColor="@color/black"
            android:background="@drawable/days_drawable_list"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>
